{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 695,
  "lineage": "76e73238-1b0f-01b4-4944-4b1999daa123",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:vpc/xxxxxxxxx",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-042df3196e710198a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-c98389a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": ["dev-2"]
              }
            ],
            "id": "xxxxxxxxx",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0b10666a0705ad1f1",
            "ipv6_cidr_block": "2a05:d014:a20:5b00::/56",
            "main_route_table_id": "rtb-05064607acdebbe21",
            "owner_id": "722913253728",
            "tags": {
              "Name": "dev-2",
              "frever-env": "dev-2",
              "kubernetes.io/cluster/dev-2": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:security-group/sg-0bc6af4116ce83228",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0bc6af4116ce83228",
            "ingress": [],
            "name": "dev-2-cluster-20220205133358850900000003",
            "name_prefix": "dev-2-cluster-",
            "owner_id": "722913253728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-2-cluster"
            },
            "tags_all": {
              "Name": "dev-2-cluster"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": ["data.aws_vpc.vpc"],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:security-group/sg-0ccabde9e7f3cf520",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0ccabde9e7f3cf520",
            "ingress": [],
            "name": "dev-2-node-20220205133358850500000001",
            "name_prefix": "dev-2-node-",
            "owner_id": "722913253728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-2-node",
              "kubernetes.io/cluster/dev-2": "owned"
            },
            "tags_all": {
              "Name": "dev-2-node",
              "kubernetes.io/cluster/dev-2": "owned"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": ["data.aws_vpc.vpc"],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Full access",
            "from_port": 0,
            "id": "sgrule-1936095268",
            "ipv6_cidr_blocks": ["::/0"],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bc6af4116ce83228",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1912716288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc6af4116ce83228",
            "self": false,
            "source_security_group_id": "sg-0ccabde9e7f3cf520",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1396013658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc6af4116ce83228",
            "self": false,
            "source_security_group_id": "sg-0ccabde9e7f3cf520",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Full access",
            "from_port": 0,
            "id": "sgrule-2203593636",
            "ipv6_cidr_blocks": ["::/0"],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bc6af4116ce83228",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-142945570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc6af4116ce83228",
            "self": false,
            "source_security_group_id": "sg-0ccabde9e7f3cf520",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Full access",
            "from_port": 0,
            "id": "sgrule-2961608924",
            "ipv6_cidr_blocks": ["::/0"],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-689102813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": false,
            "source_security_group_id": "sg-0bc6af4116ce83228",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-2142925605",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2690928187",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-3740953398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4224575967",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1974102969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_access",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["0.0.0.0/0"],
            "description": "Full access",
            "from_port": 0,
            "id": "sgrule-821932386",
            "ipv6_cidr_blocks": ["::/0"],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1396208530",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": false,
            "source_security_group_id": "sg-0bc6af4116ce83228",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2909619051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": false,
            "source_security_group_id": "sg-0bc6af4116ce83228",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-509619762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3124727261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ccabde9e7f3cf520",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"app\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:security-group/sg-054a2a2a2ac5f80fc",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-054a2a2a2ac5f80fc",
            "ingress": [],
            "name": "app-eks-node-group-20220205133358856500000007",
            "name_prefix": "app-eks-node-group-",
            "owner_id": "722913253728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-eks-node-group",
              "frever-env": "dev-2",
              "k8s.io/cluster-autoscaler/dev-2": "owned",
              "k8s.io/cluster-autoscaler/enabled": "TRUE"
            },
            "tags_all": {
              "Name": "app-eks-node-group",
              "frever-env": "dev-2",
              "k8s.io/cluster-autoscaler/dev-2": "owned",
              "k8s.io/cluster-autoscaler/enabled": "TRUE"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.database",
            "data.aws_subnet_ids.elasticache",
            "data.aws_subnet_ids.private",
            "data.aws_subnet_ids.public",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"jaeger\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:722913253728:security-group/sg-090e42940332eb590",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-090e42940332eb590",
            "ingress": [],
            "name": "jaeger-eks-node-group-20220205133358856100000004",
            "name_prefix": "jaeger-eks-node-group-",
            "owner_id": "722913253728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jaeger-eks-node-group",
              "frever-env": "dev-2"
            },
            "tags_all": {
              "Name": "jaeger-eks-node-group",
              "frever-env": "dev-2"
            },
            "timeouts": null,
            "vpc_id": "xxxxxxxxx"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.database",
            "data.aws_subnet_ids.elasticache",
            "data.aws_subnet_ids.private",
            "data.aws_subnet_ids.public",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}